--- a/javasemantic/src/components/info-page/info-page.css
+++ b/javasemantic/src/components/info-page/info-page.css
@@ -2,9 +2,9 @@
   display: flex;
   flex-direction: row;
   min-width: 70%;
-  min-height: 100%;
   max-width: 70%;
-  max-height: 100%;
+  min-height: 100vh;
+  max-height: 100vh;
   margin: auto;
 }
 
@@ -12,12 +12,19 @@
   min-width: 250px;
   max-height: 100%;
   min-height: 100%;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .body-container {
   max-height: 100%;
+  overflow-y: scroll;
   min-height: 100%;
   display: flex;
   flex-direction: column;
   padding: 30px;
+}
+
+.body-container img {
+  max-width: 100%;
 }
