--- a/javasemantic/src/components/info-page/info-page.css
+++ b/javasemantic/src/components/info-page/info-page.css
@@ -9,7 +9,7 @@
 }
 
 .sidebar-container {
-  min-width: 250px;
+  min-width: 330px;
   max-height: 100%;
   min-height: 100%;
   margin-top: auto;
@@ -27,4 +27,30 @@
 
 .body-container img {
   max-width: 100%;
+  width: 50%;
+}
+
+@media only screen and (max-width: 780px) {
+  .info-page {
+    flex-direction: column;
+    min-width: 100%;
+    max-width: 100%;
+  }
+
+  .sidebar-container {
+    min-width: 100%;
+    max-height: 20%;
+    min-height: 20%;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  .body-container {
+    max-height: 60vh;
+    overflow-y: none;
+    min-height: 60vh;
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+  }
 }
